Closed Bug 1580228 Opened 5 years ago Closed 5 years ago

Fix usage of nsIDocShellTreeItem in nsDocShell::EndPageLoad

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla72
Fission Milestone M6
Tracking Status
firefox72 --- fixed

People

(Reporter: djvj, Assigned: djvj)

References

(Blocks 1 open bug)

Details

(Whiteboard: [rm-docshell-tree-item:simple])

Attachments

(1 file, 1 obsolete file)

https://searchfox.org/mozilla-central/source/docshell/base/nsDocShell.cpp#6590

This use in nsDocShell::EndPageLoad is pretty simple. The tree is simply checked to see if the parent exists, and the variable isTopFrame set on that basis. This needs to be changed to use the BrowsingContext tree to determine the isTopFrame flag instead.

Fission Milestone: --- → M5
Priority: -- → P2
Whiteboard: [rm-docshell-tree-item:simple]
Fission Milestone: M5 → Future

Kannan says replacing nsIDocShellTreeItem calls should block enabling Fission in Nightly (M6).

Fission Milestone: Future → M6
Assignee: nobody → kvijayan
Pushed by kvijayan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/99d7e2c46514
Fix usage of nsIDocShellTreeItem in nsDocShell::EndPageLoad r=kmag
Attachment #9110065 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: