Bug 1580228 - Fix usage of nsIDocShellTreeItem in nsDocShell::EndPageLoad r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D54604